--- a/rat.csproj
+++ b/rat.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>rat</ToolCommandName>
+    <PackageId>rat</PackageId>
+    <PackageOutputPath>.nuget</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
