--- a/rat.csproj
+++ b/rat.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,7 +6,14 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>rat</ToolCommandName>
     <PackageId>rat</PackageId>
+
     <PackageOutputPath>.nuget</PackageOutputPath>
+
+    <Version>1.0.0</Version>
+    <Authors>UltiRequiem</Authors>
+    <Company>ultirequiem.com</Company>
+
+    <license type="expression">BSD-2-Clause OR MIT</license>
   </PropertyGroup>
 
   <ItemGroup>
