--- a/rat.csproj
+++ b/rat.csproj
@@ -1,31 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
 
-    <PlatformTarget>AnyCpu</PlatformTarget>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <TargetFramework>net5.0</TargetFramework>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    </PropertyGroup>
 
-    <PackAsTool>true</PackAsTool>
-    <ToolCommandName>rat</ToolCommandName>
-    <PackageId>rat</PackageId>
-
-    <PackageOutputPath>.nuget</PackageOutputPath>
-
-    <Version>1.0.0</Version>
-    <Authors>UltiRequiem</Authors>
-    <Company>ultirequiem.com</Company>
-
-    <license>license</license>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <Description>A minimal cat clone.</Description>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="System.CommandLine" Version="2.0.0-beta1.21308.1" />
-    <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.21216.1" />
-  </ItemGroup>
+    <ItemGroup>
+      <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.21216.1" />
+    </ItemGroup>
 
 </Project>
