--- a/rat.csproj
+++ b/rat.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <PackageId>rat</PackageId>
+    <Descripton>A cat clone</Descripton>
+    <RepositoryUrl>https://github.com/UltiRequiem/rat</RepositoryUrl>
+    <Version>1.2.0</Version>
+    <Authors>UltiRequiem</Authors>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
